--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">DrawerApp</string>
     <string name="header">App Header Bar</string>
     <string name="footer">App Footer Bar</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
 </resources>
